# hiproc

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Code-Of-Conduct.rst  EDR_Stats.py  HISTORY.rst  HiCal.py  HiCal_Cubenorm_Filter.py  HiCal_HiGainFx.py  HiCal_NoiseFilter.py  HiStitch.py  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  hirise.py  isis.py  mdr2cub  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
PyRISE/: EDR_Stats.py  HiBeautify.py  HiCal.py  HiColorInit.py  HiColorNorm.py  HiJACK.py  HiJitReg.py  HiNoProj.py  HiPrecisionInit.py  HiSlither.py  HiStitch.py  HiccdStitch.py  JitPlot.py  SlitherStats.py  __init__.py  bitflips.py  hirise.py  hirise_proc.py  img.py  mdr2cub.py  reverse_clean.py  unflipbits.py  util.py
data/: HiCal.conf  HiGainFx.conf  HiJitReg.conf  HiNoProj.conf  HiRISE_Gain_Drift_Correction_Bin2.0001.csv  HiRISE_Gain_Drift_Correction_Bin4.0001.csv  HiStitch.conf  HiccdStitch.conf  NoiseFilter.conf  ResolveJitter.conf  hical.noise.pipelines.conf
docs/: Makefile  conf.py  console.rst  environment.yml  index.rst  installation.rst  make.bat  processing.rst  requirements.txt  usage.rst
hiproc/: EDR_Stats.py  FlatFile.py  HiBeautify.py  HiCal.py  HiColorInit.py  HiColorNorm.py  HiJACK.py  HiJitReg.py  HiNoProj.py  HiPrecisionInit.py  HiSlither.py  HiStitch.py  HiccdStitch.py  JitPlot.py  SlitherStats.py  __init__.py  bitflips.py  bitunflip.py  bobclean.py  fft_clean.py  hiproc.py  hirise.py  hirise_proc.py  (+5 more)
(+59 files in other folders)
