[bumpversion]
current_version = 0.6.1-dev
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
values = 
	dev
	production

[bumpversion:file:hiproc/__init__.py]

[metadata]
name = hiproc
version = attr:hiproc.__version__
author = attr:hiproc.__version__
author_email = attr:hiproc.__email__
description = A library to help process HiRISE EDRs with ISIS.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/rbeyer/hiproc
classifiers = 
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Development Status :: 2 - Pre-Alpha
	Natural Language :: English

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
